fix not visible popover

--- a/popover.less
+++ b/popover.less
@@ -62,7 +62,6 @@
   width: @popover-width;
   background-color: @popover-bg-color;
   box-shadow: @popover-box-shadow;
-  opacity: 0;
 
   &.dark{
     background-color: @popover-bg-color-dark;
